--- a/Heroes.ReplayParser.NetCore.WebAPI/Heroes.ReplayParser.NetCore.WebAPI/Heroes.ReplayParser.NetCore.WebAPI.csproj
+++ b/Heroes.ReplayParser.NetCore.WebAPI/Heroes.ReplayParser.NetCore.WebAPI/Heroes.ReplayParser.NetCore.WebAPI.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
